<resources>
    <string name="app_name">MoneyConverter</string>
    <string name="converter_from_currency_icon_content_description" />
    <string name="hint_string">0.0</string>
    <string name="convert">Конвертировать</string>
    <string name="zero_numb">0.0</string>
    <string name="usd">USD</string>
    <string name="byn">BYN</string>
    <string name="RUB">RUB</string>
    <string name="EUR">EUR</string>
</resources>