<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/belarusIV"
        android:layout_width="@dimen/flag_fab_size"
        android:layout_height="@dimen/flag_fab_size"
        android:layout_marginStart="@dimen/flag_margin_size"
        android:layout_marginTop="@dimen/flag_margin_size"
        android:contentDescription="@string/converter_from_currency_icon_content_description"
        android:src="@drawable/ic_belarus"
        app:fabCustomSize="@dimen/flag_margin_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:maxImageSize="@dimen/flag_fab_size" />

    <TextView
        android:id="@+id/belarusTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/byn"
        app:layout_constraintEnd_toEndOf="@id/belarusIV"
        app:layout_constraintStart_toStartOf="@id/belarusIV"
        app:layout_constraintTop_toBottomOf="@id/belarusIV" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/small_dimen"
        android:layout_marginEnd="@dimen/small_dimen"
        android:gravity="end"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/belarusIV"
        app:layout_constraintTop_toTopOf="@id/belarusIV">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/belarusEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:hint="@string/zero_numb" />

    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/usdIV"
        android:layout_width="@dimen/flag_fab_size"
        android:layout_height="@dimen/flag_fab_size"
        android:layout_marginStart="@dimen/flag_margin_size"
        android:layout_marginTop="@dimen/flag_margin_size"
        android:src="@drawable/ic_usa"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/belarusTV" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/usdIV"
        app:layout_constraintStart_toStartOf="@id/usdIV"
        app:layout_constraintTop_toBottomOf="@id/usdIV"
        android:text="@string/usd"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/small_dimen"
        android:layout_marginEnd="@dimen/small_dimen"
        app:hintEnabled="false"
        android:gravity="end"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/usdIV"
        app:layout_constraintTop_toTopOf="@id/usdIV">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/usdEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/zero_numb" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/convertButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/input_text_margin"
        android:layout_marginBottom="64dp"
        android:text="@string/convert"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteY="440dp" />
</androidx.constraintlayout.widget.ConstraintLayout>


